crates/builder/src/parser/snapshots/bb_schema.snap
---
source: crates/builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(),\nr#\"\n            @postgres\n            module TestModule{\n                // a short comment\n                @table(\"concerts\")\n                type Concert {\n                    @pk id: Int = autoIncrement()\n                    title: String // a comment\n                    // another comment\n                    @column(\"venueid\") venue: Venue \n                    /*\n                    not_a_field: Int\n                    */\n                }\n\n                /*\n                a multiline comment\n                */\n                @table(\"venues\")\n                type Venue {\n                    @pk id: Int = autoIncrement()\n                    name: String\n                    /*here */ @column(\"venueid\") /* and here */ concerts: Set<Concert /* here too! */> \n                }\n            }\n        \"#.as_bytes(),\nfile_span, Path :: new(\"input.exo\")).unwrap()"
---
types: []
modules:
  - name: TestModule
    annotations:
      - name: postgres
        params: None
    types:
      - name: Concert
        kind: Type
        fields:
          - name: id
            typ:
              Plain:
                - ~
                - Int
                - []
                - ~
            arguments: []
            annotations:
              - name: pk
                params: None
            default_value:
              kind:
                Function:
                  - autoIncrement
                  - []
            doc_comments: ~
          - name: title
            typ:
              Plain:
                - ~
                - String
                - []
                - ~
            arguments: []
            annotations: []
            default_value: ~
            doc_comments: ~
          - name: venue
            typ:
              Plain:
                - ~
                - Venue
                - []
                - ~
            arguments: []
            annotations:
              - name: column
                params:
                  Single:
                    - StringLiteral:
                        - venueid
            default_value: ~
            doc_comments: ~
        fragment_references: []
        annotations:
          - name: table
            params:
              Single:
                - StringLiteral:
                    - concerts
        doc_comments: ~
      - name: Venue
        kind: Type
        fields:
          - name: id
            typ:
              Plain:
                - ~
                - Int
                - []
                - ~
            arguments: []
            annotations:
              - name: pk
                params: None
            default_value:
              kind:
                Function:
                  - autoIncrement
                  - []
            doc_comments: ~
          - name: name
            typ:
              Plain:
                - ~
                - String
                - []
                - ~
            arguments: []
            annotations: []
            default_value: ~
            doc_comments: ~
          - name: concerts
            typ:
              Plain:
                - ~
                - Set
                - - Plain:
                      - ~
                      - Concert
                      - []
                      - ~
                - ~
            arguments: []
            annotations:
              - name: column
                params:
                  Single:
                    - StringLiteral:
                        - venueid
            default_value: ~
            doc_comments: ~
        fragment_references: []
        annotations:
          - name: table
            params:
              Single:
                - StringLiteral:
                    - venues
        doc_comments: ~
    enums: []
    methods: []
    interceptors: []
    base_exofile: input.exo
    doc_comments: ~
imports: []
declaration_doc_comments: ~
