crates/builder/src/parser/snapshots/context_schema.snap
---
source: crates/builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(),\nr#\"\n            context AuthUser {\n                @jwt(\"sub\") id: Int \n                @jwt roles: Array<String> \n            }\n        \"#.as_bytes(),\nfile_span, Path :: new(\"input.exo\")).unwrap()"
---
types:
  - name: AuthUser
    kind: Context
    fields:
      - name: id
        typ:
          Plain:
            - ~
            - Int
            - []
            - ~
        arguments: []
        annotations:
          - name: jwt
            params:
              Single:
                - StringLiteral:
                    - sub
        default_value: ~
        doc_comments: ~
      - name: roles
        typ:
          Plain:
            - ~
            - Array
            - - Plain:
                  - ~
                  - String
                  - []
                  - ~
            - ~
        arguments: []
        annotations:
          - name: jwt
            params: None
        default_value: ~
        doc_comments: ~
    fragment_references: []
    annotations: []
    doc_comments: ~
modules: []
imports: []
declaration_doc_comments: ~
